--- a/siteproject1.css
+++ b/siteproject1.css
@@ -123,6 +123,8 @@ article:nth-of-type(1){
     display: flex;
     flex-direction: row;
     align-self: center;
+    background-color: rgb(192, 186, 186);
+
 }
 
 p:nth-of-type(1) {
@@ -135,16 +137,9 @@ p:nth-of-type(1) {
     height: 300px;
     width: 300px;
     padding: 20px;
-
-    margin-top: -30px;
-    border-radius: 30%;
-    box-shadow: 10px 5px 10px;
+    margin-top: 20px;
 }
 
-iframe {
-    border-radius: 30px;
-    box-shadow: 10px 5px 10px black;
-}
 
 
 
@@ -208,6 +203,7 @@ section:nth-of-type(4) {
     from {
         transform: translateX(-600px);
         background-color: black;
+      
     }
 
     50% {
@@ -248,6 +244,8 @@ section:nth-of-type(6) {
 section:nth-of-type(6) {
     display: flex;
     justify-content: space-evenly;
+    background-color: #27409e;
+    
 
 }
 
@@ -257,31 +255,6 @@ audio {
     box-shadow: 2px 5px 2px;
     justify-self: center;
 }
-
-
-footer {
-    width: 100%;
-    height: 150px;
-    background-color: #27409e;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    
-
-}
-
-.footertext {
-    color: beige;
-    font-family: 'Michroma', sans-serif;
-    font-size: 1.5em;
-    align-self: center;
-}
-
-.footertext:hover{
-    color: cornflowerblue;
-}
-
-/*
 
 #cssart1{
     display: flex;
@@ -383,6 +356,4 @@ footer {
     display: flex;
     width: 250px;
     height: 250px;
-
 }
-*/
