--- a/page_css_matt.css
+++ b/page_css_matt.css
@@ -49,6 +49,7 @@ h1 {
 
 }
 
+
 h3 {
 
     font-family: 'Open Sans', sans-serif;
@@ -366,5 +367,26 @@ p:nth-of-type(1) {
     font-weight: 500;
 }
 
+/*footer*/
+footer {
+    height: 150px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #27409e;
+    
+}
+
+.footertext{
+    align-self: center;
+    font-family: 'Michroma', sans-serif;
+    color: gainsboro;
+    font-size: 1em;   
+    text-decoration: none;
+}
+
+.footertext:hover{
+    color: crimson;
+}
 
 
